add 2 forms to check on dev

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -349,6 +349,10 @@
   align-items: center;
 }
 
+.thankyou {
+  display: none;
+}
+
 @media (min-width: 1320px) and (max-width: 1417px) {
   .feedback_title--padding {
     padding-bottom: 90px;
