--- a/src/css/business.css
+++ b/src/css/business.css
@@ -120,7 +120,7 @@
 /*...whatCanWeDo...*/
 .whatCanWeDo-wrap {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   justify-items: center;
 }
 
@@ -143,7 +143,7 @@
   font-weight: var(--semi-bold);
   font-size: var(--h2);
   line-height: 40px;
-  padding-bottom: 125px;
+  padding-bottom: 110px;
 }
 
 .whatCanWeDo-title--row {
@@ -168,21 +168,13 @@
   font-weight: var(--semi-bold);
   font-size: var(--h3);
   line-height: 41px;
-  padding: 12px 0 20px;
+  padding: 30px 0;
 }
 
 .whatCanWeDo-item-paragraph {
   font-weight: var(--light);
   font-size: var(--p);
   line-height: 30px;
-  min-height: 180px;
-}
-
-@media (min-width: 1280px) and (max-width: 1650px) {
-  .whatCanWeDo-item-paragraph {
-    max-width: 500px;
-    margin: 0 auto;
-  }
 }
 
 @media (min-width: 961px) and (max-width: 1280px) {
@@ -220,10 +212,6 @@
 /*...end readyToChat...*/
 
 @media screen and (max-width: 960px) {
-  .whatCanWeDo-wrap {
-    grid-template-columns: 1fr;
-  }
-
   .whatCanWeDo-section {
     padding: 100px 15px 100px;
   }
