--- a/src/css/business.css
+++ b/src/css/business.css
@@ -80,7 +80,7 @@
 
 .cta-section__subtitle {
   max-width: 50vw;
-  font-size: var(--p);
+  font-size: var(--h3);
   font-weight: var(--light);
   line-height: 35px;
   margin: 0 auto 15px;
@@ -91,7 +91,8 @@
 }
 
 .cta-section__terms {
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 25px;
   margin-bottom: 60px;
 }
 
@@ -115,10 +116,9 @@
 }
 
 .whyOpenPay {
-  margin: 0 auto 30px;
+  margin: 0 auto 65px;
   position: relative;
   z-index: 1;
-  color: var(--secondary-dark);
   text-align: center;
 }
 
@@ -129,8 +129,8 @@
 }
 
 .whyOpenPay__text {
-  max-width: 50vw;
-  font-size: var(--p);
+  max-width: 85vw;
+  font-size: var(--h3);
   font-weight: var(--light);
   line-height: 35px;
   margin: 0 auto 25px;
