--- a/src/css/get-in-touch.css
+++ b/src/css/get-in-touch.css
@@ -31,13 +31,50 @@
   font-size: 30px;
 }
 
+.cta-section {
+  background-color: var(--neutral-light);
+  padding: 90px 20px;
+  text-align: center;
+}
+
+.cta-section__title {
+  font-size: var(--h2);
+  font-weight: var(--semi-bold);
+  margin-bottom: 30px;
+}
+
+.cta-section__subtitle {
+  max-width: 1100px;
+  margin: 0 auto;
+  font-size: var(--h3);
+  font-weight: var(--light);
+  line-height: 45px;
+}
+
+.cta-section__subtitle--bold {
+  font-weight: var(--semi-bold);
+}
+
+.cta-section__terms {
+  font-size: 16px;
+  line-height: 25px;
+  max-width: 630px;
+  margin: 30px auto 0;
+}
+
 .get-in-touch {
-  padding: 110px 20px;
+  padding: 90px 20px 130px;
+}
+
+.get-in-touch__title {
+  font-size: var(--h3);
+  line-height: 45px;
+  text-align: center;
 }
 
 .get-in-touch__form {
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 80px auto 0;
 }
 
 .form__container {
